Outliner - Objects Filter Selected, Hidden and Active not working properly when parenting is involved #69246

Closed
opened 2019-08-28 13:54:16 +02:00 by Marcus Papathoma · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-27 18:27, hash: 697fd86506
also broken in 2.8 final release
Worked:

Short description of error
Outliner - Objects Filter Selected, Hidden and Active not working poperly
In a new default scene everything is working fine.

Exact steps for others to reproduce the error
Open the attached blender scene. It is the wasp_bot scene.
Go to the outliner and go to filter dropdown > Objects > Hidden
More objects than just the only hidden object (Mesh_light) are shown in the outliner.
Go to the outliner and go to filter dropdown > Objects > Selected
More objects than just the selected object (Helmet_01) are shown in the outliner.
Go to the outliner and go to filter dropdown > Objects > Active
More objects than just the active object (Helmet_01) are shown in the outliner.
outliner_hidden_filter_wasp_bot.blend
In an new scene, if you duplicate the default cube a few times these outliner filters work as expected!

Edit: this is happening when parenting is involved, see also 40a1c67165

Alternative (simpler) testfile:
#69246.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.02 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-27 18:27, hash: `697fd86506` also broken in 2.8 final release Worked: **Short description of error** Outliner - Objects Filter Selected, Hidden and Active not working poperly **In a new default scene everything is working fine.** **Exact steps for others to reproduce the error** Open the attached blender scene. It is the wasp_bot scene. Go to the outliner and go to filter dropdown > Objects > Hidden More objects than just the only hidden object (Mesh_light) are shown in the outliner. Go to the outliner and go to filter dropdown > Objects > Selected More objects than just the selected object (Helmet_01) are shown in the outliner. Go to the outliner and go to filter dropdown > Objects > Active More objects than just the active object (Helmet_01) are shown in the outliner. [outliner_hidden_filter_wasp_bot.blend](https://archive.blender.org/developer/F7707650/outliner_hidden_filter_wasp_bot.blend) In an new scene, if you duplicate the default cube a few times these outliner filters **work as expected!** Edit: this is happening when parenting is involved, see also 40a1c67165 Alternative (simpler) testfile: [#69246.blend](https://archive.blender.org/developer/F8257970/T69246.blend)

Added subscriber: @machieb

Added subscriber: @machieb

Any news about this bug?

Any news about this bug?

Four months and no feedback/activity...

Four months and no feedback/activity...
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Sorry this has been lying around for so long!

I can confirm, checking...

Sorry this has been lying around for so long! I can confirm, checking...
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member

Something still not right with 40a1c67165, needs further investigation...

CC @dfelinto

Something still not right with 40a1c67165, needs further investigation... CC @dfelinto

This issue was referenced by cb1f48ab7f

This issue was referenced by cb1f48ab7f5024715a898b767576ce4258098516
Member

simpler testfile:
#69246.blend

simpler testfile: [#69246.blend](https://archive.blender.org/developer/F8257967/T69246.blend)
Philipp Oeser changed title from Outliner - Objects Filter Selected, Hidden and Active not working poperly to Outliner - Objects Filter Selected, Hidden and Active not working properly when parenting is involved 2020-01-03 11:17:35 +01:00
Dalai Felinto self-assigned this 2020-01-07 10:48:45 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thank you very much, now it is working as expected!

Thank you very much, now it is working as expected!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69246
No description provided.