source/blender/editors/space_outliner/outliner_tree.c
@@ -2186,6 +2186,8 @@ static int outliner_filter_subtree(SpaceOutliner *soops,
     te_next = te->next;
     if ((outliner_element_visible_get(view_layer, te, exclude_filter) == false)) {
       /* Don't free the tree, but extract the children from the parent and add to this tree. */
+      /* This also needs filtering the subtree prior (see T69246). */
+      outliner_filter_subtree(soops, view_layer, &te->subtree, search_string, exclude_filter);
       te_next = outliner_extract_children_from_subtree(te, lb);
       continue;
     }
